# obsidian-recursive-share

./: .gitignore  LICENSE  README.md  makefile
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  settings.toml
backend/src/: api.rs  api_auth.rs  config.rs  main.rs  storage.rs  ui.rs
backend/src/storage/: context.rs  meta.rs
backend/src/ui/: template.html
plugin/: .gitignore  dist  esbuild.config.mjs  manifest.json  package-lock.json  package.json
plugin/src/: main.ts
