[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.11", features = ["async"] }
notify = { version = "8.0.0" }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = "0.4.41"
serde_json = "1.0.140"
tera = "1.20.0"
rocket_cors = "0.6.0"
markdown = "1.0.0"
